# rtsshotkey

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  HotkeyAppForm.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
